refactor: 반영된 코드 피드백 수정 및 전역 예외 처리 리팩토링